# SpotAxis

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  Contribute (1).md  Contribute (2).md  DNS_HOSTS_LOCAL_DEVELOPMENT.md  Process to setup UV and Install modules.txt  README.md  USE CASES.md  env_template.txt  environment.py  et --hard 097a08a  install.py  loaddata_from_apps.sh  loaddata_from_apps_windows.bat  main.py  manage.py  output.html  pyproject.toml  requirements.txt  script.py  utils.py
.uvenu/: pyvenv.cfg
.uvenv/: pyvenv.cfg
TRM/: __init__.py  blog_urls.py  context_processors.py  middleware.py  settings.py  settings_local_development.py  settings_productive.py  settings_server_development.py  static_views.py  subdomain_urls.py  support_urls.py  urls.py  views.py  wsgi.py
activities/: admin.py  apps.py  models.py  utils.py  views.py
candidates/: __init__.py  admin.py  apps.py  forms.py  models.py  views.py
ckeditor/: __init__.py  fields.py  image_processing.py  urls.py  utils.py  views.py  widgets.py
common/: admin.py  ajax.py  fields.py  forms.py  ipgetter.py  models.py  registration_settings.py  views.py
companies/: __init__.py  admin.py  apps.py  custom_fields.py  forms.py  models.py  views.py
companies_api/: apps.py  serializers.py  urls.py  views.py
customField/: admin.py  apps.py  forms.py  models.py  serializers.py  settings.py
el_pagination/: __init__.py  decorators.py  exceptions.py  loaders.py  models.py  paginators.py  settings.py  utils.py  views.py
example/: forms.py  models.py  views.py
helpdesk/: admin.py  akismet.py  apps.py  cron.py  forms.py  lib.py  models.py  settings.py  urls.py
helpdesk_api/: apps.py  serializers.py  urls.py
(+810 files in other folders)
