[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotaxis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autodoc>=0.5.0",
    "beautifulsoup4>=4.13.4",
    "datefinder>=0.7.3",
    "django>=5.2.1",
    "django-contrib-comments>=2.2.0",
    "django-filter>=25.1",
    "django-mptt>=0.17.0",
    "django-nested-formset>=0.1.4",
    "django-tagging>=0.5.0",
    "django-xmlrpc>=0.1.8",
    "djangorestframework>=3.16.0",
    "docutils>=0.21.2",
    "email-reply-parser>=0.5.12",
    "hashids>=1.3.1",
    "ipgetter2>=1.1.10",
    "mammoth>=1.9.1",
    "markdown>=3.8",
    "mots-vides>=2015.5.11",
    "oauth2>=1.9.0.post1",
    "paypalrestsdk>=1.13.3",
    "pdfminer-six>=20250506",
    "pillow>=11.2.1",
    "pymysql>=1.1.1",
    "pypdf>=5.5.0",
    "pyth>=0.6.0",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.1.2",
    "python-linkedin>=4.1",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "selenium>=4.33.0",
    "six>=1.17.0",
    "south>=1.0.2",
    "stop-words>=2018.7.23",
    "textile>=4.0.3",
    "unidecode>=1.4.0",
    "weasyprint>=65.1",
    "xvfbwrapper>=0.2.13"
]

[tool.setuptools]
packages = [
    "trm",
    "activities",
    "candidates",
    "ckeditor",
    "common",
    "companies",
    "customField",
    "el_pagination",
    "example",
    "helpdesk",
    "locale",
    "payments",
    "resume_parser",
    "scheduler",
    "socialmultishare",
    "ssl",
    "upload_logos",
    "zinnia",
    "vacancies"
]
